--- a/scorm-builder/package.json
+++ b/scorm-builder/package.json
@@ -25,8 +25,10 @@
         "archiver": "^6.0.1",
         "chalk": "^4.1.2",
         "commander": "^11.0.0",
+        "dotenv": "^16.3.1",
         "ejs": "^3.1.10",
         "express": "^5.1.0",
+        "firebase-admin": "^11.11.0",
         "fs-extra": "^11.1.1",
         "joi": "^17.9.2",
         "multer": "^2.0.2",
