--- a/scorm-builder/package.json
+++ b/scorm-builder/package.json
@@ -5,18 +5,19 @@
     "main": "web-ui/server.js",
     "scripts": {
         "build": "node build.js",
-        "build:all": "node build.js --all",
+        "build:all": "node build.js --all", 
         "build:topic": "node build.js --topic $npm_config_topic --dev --backend https://learning-platform-ecosystem.onrender.com",
         "build:prod": "node build.js --topic $npm_config_topic --backend https://learning-platform-ecosystem.onrender.com",
         "clean": "rm -rf output/* temp/* test-output/*",
         "clean:test": "rm -rf test-output && mkdir -p test-output",
         "extract": "node scripts/extract-topic.js",
         "validate": "node scripts/validate-topics.js",
+        "validate:cloud": "node scripts/validate-cloud-topics.js",
         "test:topic": "npm run validate && npm run build:topic && npm run extract && npm run serve:test",
         "serve:test": "node test-server.js",
         "lint": "eslint .",
-        "prestart": "npm run validate",
-        "start:ui": "node web-ui/server.js",
+        "prestart": "echo 'Starting SCORM Builder Web UI...'",
+        "start:ui": "node web-ui/server.js", 
         "dev:ui": "nodemon web-ui/server.js",
         "start": "node web-ui/server.js",
         "render-postbuild": "npm run clean && mkdir -p web-ui/public/downloads && mkdir -p output && mkdir -p test-output"
