--- a/scorm-builder/topics/TestingAI-M1-T1/config.json
+++ b/scorm-builder/topics/TestingAI-M1-T1/config.json
@@ -23,18 +23,11 @@
           "title": "Set up Google Gemini API Access",
           "description": "Get your free API key from Google AI Studio",
           "instructions": "Navigate to Google AI Studio (https://aistudio.google.com/) and create a new API key. This will give you access to the Gemini API for free with generous usage limits.",
-          "images": [
-            {
-              "src": "gemini-api-studio.jpg",
-              "alt": "Google AI Studio API key generation",
-              "caption": "Step 1: Generate your free Gemini API key"
-            },
-            {
-              "src": "step-2-cursor-setup.jpg",
-              "alt": "Google AI Studio interface",
-              "caption": "Find API keys under 'Get API key' in AI Studio"
-            }
-          ],
+          "video": {
+            "src": "api-setup-demo.mp4",
+            "type": "local",
+            "caption": "Watch a step-by-step demonstration of setting up Google Gemini API access"
+          },
           "code": {
             "content": "// Store your API key securely\nconst GEMINI_API_KEY = 'your-api-key-here';\n\n// Test API connection\nconst testConnection = async () => {\n  const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${GEMINI_API_KEY}`, {\n    method: 'POST',\n    headers: { 'Content-Type': 'application/json' },\n    body: JSON.stringify({\n      contents: [{ parts: [{ text: 'Hello, Gemini!' }] }]\n    })\n  });\n  return response.ok;\n};",
             "language": "javascript"
@@ -134,10 +127,10 @@
           "title": "Add Summary Length Controls",
           "description": "Implement controls to customize the length of generated summaries",
           "instructions": "Add radio buttons or a dropdown to let users choose between short, medium, and long summaries. Update your API calls to use the selected length preference.",
-          "image": {
-            "src": "step-5-testing.jpg",
-            "alt": "Testing different text inputs",
-            "caption": "Step 5: Add length controls and test your app"
+          "video": {
+            "src": "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
+            "type": "embed",
+            "caption": "Learn how to implement summary length controls with this comprehensive tutorial"
           },
           "code": {
             "content": "def process_data(data):\n    \"\"\"Process input data\"\"\"\n    result = [x * 2 for x in data if x > 0]\n    return sum(result)\n\n# Test\nprint(process_data([1, -2, 3]))",
