--- a/scorm-builder/package.json
+++ b/scorm-builder/package.json
@@ -5,7 +5,7 @@
     "main": "web-ui/server.js",
     "scripts": {
         "build": "node build.js",
-        "build:all": "node build.js --all", 
+        "build:all": "node build.js --all",
         "build:topic": "node scripts/build-topic.js --dev --backend https://learning-platform-ecosystem.onrender.com",
         "build:prod": "node build.js --backend https://learning-platform-ecosystem.onrender.com",
         "clean": "rimraf output/* temp/* test-output/*",
@@ -17,13 +17,14 @@
         "serve:test": "node test-server.js",
         "lint": "eslint .",
         "prestart": "echo 'Starting SCORM Builder Web UI...'",
-        "start:ui": "node web-ui/server.js", 
+        "start:ui": "node web-ui/server.js",
         "dev:ui": "nodemon web-ui/server.js",
         "start": "node web-ui/server.js",
         "render-postbuild": "npm run clean && mkdirp web-ui/public/downloads && mkdirp output && mkdirp test-output"
     },
     "dependencies": {
         "archiver": "^6.0.1",
+        "axios": "^1.13.1",
         "chalk": "^4.1.2",
         "commander": "^11.0.0",
         "dotenv": "^16.3.1",
@@ -42,9 +43,10 @@
     "devDependencies": {
         "eslint": "^8.46.0",
         "jest": "^29.6.2",
+        "mkdirp": "^3.0.1",
         "nodemon": "^3.0.1",
         "rimraf": "^5.0.1",
-        "mkdirp": "^3.0.1"
+        "shadcn": "^3.5.0"
     },
     "keywords": [
         "scorm",
